force-app/main/default/objects/msf_DefaultUserListView__c/msf_DefaultUserListView__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para guardar las listView que cada usuario tiene por defecto al cargar el componente Modificación Masiva de Tareas.</description>
    <label>Default User ListView</label>
    <nameField>
        <label>Default User ListView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default User ListViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>