force-app/main/default/objects/msf_DefaultUserListView__c/fields/msf_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>msf_DeveloperName__c</fullName>
    <label>developerName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>