force-app/main/default/objects/msf_DefaultUserListView__c/fields/msf_ListViewId__c.field-meta.xml
<CustomField>
    <fullName>msf_ListViewId__c</fullName>
    <label>ListViewId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>