force-app/main/default/objects/msf_DefaultUserListView__c/fields/msf_ListViewName__c.field-meta.xml
<CustomField>
    <fullName>msf_ListViewName__c</fullName>
    <label>listViewName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>