force-app/main/default/objects/msf_DefaultUserListView__c/fields/msf_User__c.field-meta.xml
<CustomField>
    <fullName>msf_User__c</fullName>
    <label>user</label>
    <length>150</length>
    <type>Text</type>
</CustomField>